# imageplot

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_points.py  block_points.xlsx  create_demo_png.py  monte_carlo_shapes.py  pallet_points.xlsx  plot_block_points_from_excel.py  plot_demo_points.py  points_from_excel.py
imageplot/: __init__.py  coordinates.py  figure.py  metadata.py
imageplot/artists/: base.py
src/imageplot/: metadata.py
src/imageplot/artists/: __init__.py  shapes.py
tests/: test_coordinates.py  test_programmatic_coordinates.py
